tests/NormalTests/paczka1/fuzzy1/39381889.err
Error in line 7: eycFiV41y S895 37,49
Error in line 8: A204 S68 99,0
Error in line 9: A204 S287 72,6
Error in line 15: eycFiV41y S895 40,6
Error in line 35: uhO3 A204 49,0
Error in line 36: YygH3ANGSVH S287 228,2
